added amplify backend

--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-vue": "^4.2.30",
+    "aws-amplify": "^6.13.4",
     "bootstrap": "^5.3.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.14.2",
+    "@aws-amplify/backend-cli": "^1.4.12",
     "@vitejs/plugin-vue": "^5.2.1",
+    "aws-cdk": "^2.1000.2",
+    "aws-cdk-lib": "^2.180.0",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.1",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.1"
   }
