--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@aws-amplify/ui-vue": "^4.2.30",
+    "ampx": "^0.2.2",
     "aws-amplify": "^6.13.4",
     "bootstrap": "^5.3.3",
+    "papaparse": "^5.5.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
