--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-vue": "^4.2.30",
+    "ampx": "^0.2.2",
     "aws-amplify": "^6.13.4",
     "bootstrap": "^5.3.3",
     "vue": "^3.5.13",
